# tatar_discord_bot

./: .gitignore  Makefile
bot/: go.mod  main.go
bot/content/: utils.go
bot/content/application/Tatarbot/: command_service.go  init.go  interface.go
bot/content/domain/: command_entities.go  link_entities.go  message_entities.go
bot/content/domain/mock/: repository.go
bot/content/handlers/: cmd_handlers.go
bot/content/services/Manybaht/: init.go  link_convert.go  manybaht_service.go
bot/content/services/Music/: init.go  interface.go
music_bot/: main.py  pyproject.toml
music_bot/music_bot/api/: routes.py  server.py
music_bot/music_bot/config/: setting.py
music_bot/music_bot/core/: bot.py  music_player.py
music_bot/music_bot/models/: __init__.py  music.py  rest_model.py
music_bot/music_bot/services/: voice_manager.py  youtube.py
music_bot/music_bot/utils/: exceptions.py  logger.py
