[project]
name = "music-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.3",
    "fastapi>=0.117.1",
    "pynacl>=1.6.0",
    "python-dotenv>=1.1.1",
    "unicorn>=2.1.4",
    "uvicorn>=0.37.0",
    "yt-dlp>=2025.9.23",
]
